<resources>
    <string name="app_name">Calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="cancel">CANCEL</string>
    <string name="reset">RESET</string>
    <string name="zero">0.00</string>
    <string name="enter"><u>enter num1</u></string>
    <string name="enter2"><u>enter num2</u></string>
</resources>
