<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff99"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputbox1"
        android:inputType="number"
        android:hint="enter num1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="#add8e6"
        android:textColor="#000000"
    />

    <EditText android:id="@+id/inputbox2"
        android:inputType="number"
        android:hint="enter num2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/inputbox1"
        android:background="#add8e6"
        android:textColor="#000000"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputbox2"
        android:layout_margin="5dp"
        android:text="@string/plus"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="#ffbb"
        android:id="@+id/add"
        android:onClick="compute"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputbox2"
        android:layout_margin="5dp"
        android:text="@string/minus"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_toEndOf="@id/add"
        android:background="#ffbb"
        android:id="@+id/minus"
        android:onClick="compute"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputbox2"
        android:layout_margin="5dp"
        android:text="@string/multiply"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="#ffbb"
        android:layout_toEndOf="@id/minus"
        android:id="@+id/multiply"
        android:onClick="compute"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputbox2"
        android:layout_margin="5dp"
        android:text="@string/divide"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="#ffbb"
        android:layout_toEndOf="@id/multiply"
        android:id="@+id/divide"
        android:onClick="compute"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiply"
        android:layout_margin="5dp"
        android:text="@string/cancel"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="#ffbb"
        android:layout_centerInParent="true"
        android:id="@+id/cancel"
        android:onClick="compute"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cancel"
        android:layout_margin="5dp"
        android:text="@string/reset"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="#ffbb"
        android:layout_centerInParent="true"
        android:id="@+id/reset"
        android:onClick="compute"/>
    <TextView
        android:id="@+id/answer"
        android:background="#add8e6"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/reset"
        android:layout_margin="5dp"
        android:textSize="30sp"
        android:labelFor="@id/answer"
        android:text="              "
        android:layout_centerInParent="true"
        />



</RelativeLayout>